# libadc

./: CMakeLists.txt  README.md  adc.c  adc.h  adc_cal.c  adc_cal.h  adc_cal_amp.c  adc_cal_amp.h  adc_cal_pvt.h  adc_data.c  adc_data.h  adc_math.c  adc_math.h  adc_ops.c  adc_ops.h  data_operations.c  data_operations.h
